<resources>
    <string name="app_name">SQLite</string>
    <string name="main_plainText_1" />
    <string name="main_plainText_2" />
    <string name="main_button_1">INSERT</string>
    <string name="main_button_2">SELECT</string>
    <string name="main_textView_1">Name:</string>
    <string name="main_textView_2">Para insertar una persona en la BD (nombre, correo):</string>
    <string name="main_textView_3">Para hacer una busqueda en la BD (id):</string>
    <string name="main_plainText_3" />
    <string name="main_button_3">SELECT *</string>
    <string name="main_textView_4">Nombre</string>
    <string name="main_textView_5">Correo</string>
    <string name="main_textView_6">ID</string>
    <string name="main_textView_7" />
</resources>
